k8s/global/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "hapi.htoh.app"
      secretName: tls-secret-api
  rules:
    - host: "hapi.htoh.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: htoh-api-gateway
                port:
                  number: 80
